reporting failure. This can be used to handle HPC-style job preemption.

+ Moved the User Guide documentation of cylc version re-invocation from
the installation section to the running suites section. 

+ Correct Quick Start Guide suite names (the initial component of the
registration name hierarchy had been omitted).

+ Do remote request handling before shutdown check (reverses the
original order) so suites can shutdown if requested even when a
failing task has retries lined up with a very short delay period.

+ New config item "[cylc] abort if any task fails = False"; if True,
the suite will abort with exit status 1 if any task false. The main
intended use for this is for pre-release automated test suites.

+ Initial GUI text view task state filtering now shows all tasks, as
users often forget that some task states are filtered out if they did
not activate the filters themselves.

+ The runahead limit now waits on waiting, submitted, and running tasks
(waiting alone is not enough to contstrain a single task cycling suite,
in which successive instances all go off at once).

+ Removed the requirement to preface the integer TAG of an asynchronous
task, on the command line, with 'a:'.

+ Suites can now be restarted after task definitions have been deleted 
without manually altering the suite state dump file. Undefined tasks in
the state dump are just be ignored at start up.

+ WARNING for those who override the default task log, work, and share
directory config items, they have been moved up out of the "job
submission" runtime sub-section, because they are common to all job
submission methods. 

+ The main cylc command interface no longer checks that Pyro is
installed, but the commands that it do. Consequently Pyro does not have
to be installed on a remote task host if you choose to use ssh
messaging, and you can still work with suites - but not run them - if
Pyro is not installed on the suite host.
